--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>Kirani Kitchen</title>
+    <title>Nitan Kitchen</title>
   </head>
   <body>
     <div id="root"></div>
